build-files/artic/1.8.0/README.md
# artic fieldbioinformatics container

Main tool : [artic](https://github.com/artic-network/fieldbioinformatics)

Full documentation: [https://github.com/artic-network/fieldbioinformatics](https://github.com/artic-network/fieldbioinformatics)

<details>

<summary>Additional tools installed via micromamba:</summary>

```
List of packages in environment: "/opt/conda/envs/artic"

  Name                       Version       Build                    Channel    
─────────────────────────────────────────────────────────────────────────────────
  _libgcc_mutex              0.1           conda_forge              conda-forge
  _openmp_mutex              4.5           2_gnu                    conda-forge
  _python_abi3_support       1.0           hd8ed1ab_2               conda-forge
  absl-py                    2.3.1         pyhd8ed1ab_0             conda-forge
  aiohappyeyeballs           2.6.1         pyhd8ed1ab_0             conda-forge
  aiohttp                    3.12.15       py310h3406613_0          conda-forge
  aiosignal                  1.4.0         pyhd8ed1ab_0             conda-forge
  align_trim                 1.0.1         pyhdfd78af_0             bioconda   
  amply                      0.1.6         pyhd8ed1ab_1             conda-forge
  annotated-types            0.7.0         pyhd8ed1ab_1             conda-forge
  args                       0.1.0         pyhd8ed1ab_1004          conda-forge
  artic                      1.8.0         pyhdfd78af_0             bioconda   
  astunparse                 1.6.3         pyhd8ed1ab_3             conda-forge
  async-timeout              5.0.1         pyhd8ed1ab_1             conda-forge
  attrs                      25.3.0        pyh71513ae_0             conda-forge
  bcftools                   1.22          h3a4d415_1               bioconda   
  biopython                  1.85          py310ha75aee5_1          conda-forge
  blinker                    1.9.0         pyhff2d567_0             conda-forge
  blosc                      1.21.5        h0f2a231_0               conda-forge
  brotli-python              1.1.0         py310hf71b8c6_3          conda-forge
  bwa                        0.7.19        h577a1d6_1               bioconda   
  bzip2                      1.0.8         h4bc722e_7               conda-forge
  c-ares                     1.34.5        hb9d3cd8_0               conda-forge
  c-blosc2                   2.15.2        h68e2383_0               conda-forge
  ca-certificates            2025.8.3      hbd8a1cb_0               conda-forge
  cached-property            1.5.2         hd8ed1ab_1               conda-forge
  cached_property            1.5.2         pyha770c72_1             conda-forge
  cachetools                 5.5.2         pyhd8ed1ab_0             conda-forge
  certifi                    2025.8.3      pyhd8ed1ab_0             conda-forge
  cffi                       1.17.1        py310h8deb56e_0          conda-forge
  charset-normalizer         3.4.3         pyhd8ed1ab_0             conda-forge
  clair3                     1.2.0         py310h779eee5_0          bioconda   
  click                      8.2.1         pyh707e725_0             conda-forge
  clint                      0.5.1         py_1                     conda-forge
  coin-or-cbc                2.10.12       h4d16d09_4               conda-forge
  coin-or-cgl                0.60.9        hc46dffc_6               conda-forge
  coin-or-clp                1.17.10       hc03379b_3               conda-forge
  coin-or-osi                0.108.11      hf4fecb4_7               conda-forge
  coin-or-utils              2.11.12       hc93afbd_6               conda-forge
  colorama                   0.4.6         pyhd8ed1ab_1             conda-forge
  coloredlogs                15.0.1        pyhd8ed1ab_4             conda-forge
  colormath                  3.0.0         pyhd8ed1ab_4             conda-forge
  cpython                    3.10.18       py310hd8ed1ab_0          conda-forge
  cryptography               45.0.6        py310hed992bd_0          conda-forge
  cyvcf2                     0.31.0        py310h0ae5082_1          bioconda   
  docutils                   0.22          pyhd8ed1ab_0             conda-forge
  exceptiongroup             1.3.0         pyhd8ed1ab_0             conda-forge
  expat                      2.7.1         hecca717_0               conda-forge
  flatbuffers                23.5.26       h59595ed_1               conda-forge
  font-ttf-dejavu-sans-mono  2.37          hab24e00_0               conda-forge
  font-ttf-inconsolata       3.000         h77eed37_0               conda-forge
  font-ttf-source-code-pro   2.038         h77eed37_0               conda-forge
  font-ttf-ubuntu            0.83          h77eed37_3               conda-forge
  fontconfig                 2.15.0        h7e30c49_1               conda-forge
  fonts-conda-forge          1             0                        conda-forge
  freetype                   2.13.3        ha770c72_1               conda-forge
  frozenlist                 1.7.0         py310h9548a50_0          conda-forge
  gast                       0.6.0         pyhd8ed1ab_0             conda-forge
  gawk                       5.3.1         hcd3d067_0               conda-forge
  giflib                     5.2.2         hd590300_0               conda-forge
  gmp                        6.3.0         hac33072_2               conda-forge
  google-auth                2.40.3        pyhd8ed1ab_0             conda-forge
  google-auth-oauthlib       1.2.2         pyhd8ed1ab_0             conda-forge
  google-pasta               0.2.0         pyhd8ed1ab_2             conda-forge
  grpcio                     1.59.3        py310h1b8f574_0          conda-forge
  gsl                        2.7           he838d99_0               conda-forge
  h2                         4.2.0         pyhd8ed1ab_0             conda-forge
  h5py                       3.13.0        nompi_py310h60e0fe6_100  conda-forge
  hdf5                       1.14.3        nompi_h2d575fe_109       conda-forge
  hpack                      4.1.0         pyhd8ed1ab_0             conda-forge
  htslib                     1.22.1        h566b1c6_0               bioconda   
  humanfriendly              10.0          pyh707e725_8             conda-forge
  humanize                   4.13.0        pyhd8ed1ab_0             conda-forge
  hyperframe                 6.1.0         pyhd8ed1ab_0             conda-forge
  icu                        73.2          h59595ed_0               conda-forge
  idna                       3.10          pyhd8ed1ab_1             conda-forge
  importlib-metadata         8.7.0         pyhe01879c_1             conda-forge
  iniconfig                  2.0.0         pyhd8ed1ab_1             conda-forge
  isa-l                      2.31.1        hb9d3cd8_1               conda-forge
  jinja2                     3.1.6         pyhd8ed1ab_0             conda-forge
  jsonschema                 4.25.1        pyhe01879c_0             conda-forge
  jsonschema-specifications  2025.4.1      pyh29332c3_0             conda-forge
  k8                         1.2           he8db53b_6               bioconda   
  kaleido-core               0.2.1         h3644ca4_0               conda-forge
  keras                      2.15.0        pyhd8ed1ab_0             conda-forge
  kernel-headers_linux-64    5.14.0        he073ed8_2               conda-forge
  keyutils                   1.6.3         hb9d3cd8_0               conda-forge
  krb5                       1.21.3        h659f571_0               conda-forge
  lcms2                      2.17          h717163a_0               conda-forge
  ld_impl_linux-64           2.44          h1423503_1               conda-forge
  lerc                       4.0.0         h0aef613_1               conda-forge
  libabseil                  20230802.1    cxx17_h59595ed_0         conda-forge
  libaec                     1.1.4         h3f801dc_0               conda-forge
  libasprintf                0.25.1        h3f43e3d_1               conda-forge
  libblas                    3.9.0         34_h59b9bed_openblas     conda-forge
  libcblas                   3.9.0         34_he106b2a_openblas     conda-forge
  libcurl                    8.14.1        h332b0f4_0               conda-forge
  libdeflate                 1.24          h86f0d12_0               conda-forge
  libedit                    3.1.20250104  pl5321h7949ede_0         conda-forge
  libev                      4.33          hd590300_2               conda-forge
  libexpat                   2.7.1         hecca717_0               conda-forge
  libffi                     3.4.6         h2dba641_1               conda-forge
  libfreetype                2.13.3        ha770c72_1               conda-forge
  libfreetype6               2.13.3        h48d6fc4_1               conda-forge
  libgcc                     15.1.0        h767d61c_4               conda-forge
  libgcc-ng                  15.1.0        h69a702a_4               conda-forge
  libgettextpo               0.25.1        h3f43e3d_1               conda-forge
  libgfortran                15.1.0        h69a702a_4               conda-forge
  libgfortran5               15.1.0        hcea5267_4               conda-forge
  libgomp                    15.1.0        h767d61c_4               conda-forge
  libgrpc                    1.59.3        hd6c4280_0               conda-forge
  libiconv                   1.18          h3b78370_2               conda-forge
  libjpeg-turbo              3.1.0         hb9d3cd8_0               conda-forge
  liblapack                  3.9.0         34_h7ac8fdf_openblas     conda-forge
  liblapacke                 3.9.0         34_he2f377e_openblas     conda-forge
  liblzma                    5.8.1         hb9d3cd8_2               conda-forge
  libnghttp2                 1.64.0        h161d5f1_0               conda-forge
  libnsl                     2.0.1         hb9d3cd8_1               conda-forge
  libopenblas                0.3.30        pthreads_h94d23a6_2      conda-forge
  libpng                     1.6.50        h421ea60_1               conda-forge
  libprotobuf                4.24.4        hf27288f_0               conda-forge
  libre2-11                  2023.09.01    h7a70373_1               conda-forge
  libsqlite                  3.50.4        h0c1763c_0               conda-forge
  libssh2                    1.11.1        hcf80075_0               conda-forge
  libstdcxx                  15.1.0        h8f9b012_4               conda-forge
  libstdcxx-ng               15.1.0        h4852527_4               conda-forge
  libtiff                    4.7.0         h8261f1e_6               conda-forge
  libuuid                    2.38.1        h0b41bf4_0               conda-forge
  libwebp-base               1.6.0         hd42ef1d_0               conda-forge
  libxcb                     1.17.0        h8a09558_0               conda-forge
  libxcrypt                  4.4.36        hd590300_1               conda-forge
  libzlib                    1.3.1         hb9d3cd8_2               conda-forge
  lz4-c                      1.9.4         hcb278e6_0               conda-forge
  lzo                        2.10          h280c20c_1002            conda-forge
  mafft                      7.526         h4bc722e_0               conda-forge
  markdown                   3.8.2         pyhd8ed1ab_0             conda-forge
  markdown-it-py             4.0.0         pyhd8ed1ab_0             conda-forge
  markupsafe                 3.0.2         py310h89163eb_1          conda-forge
  mathjax                    2.7.7         ha770c72_3               conda-forge
  mdurl                      0.1.2         pyhd8ed1ab_1             conda-forge
  minimap2                   2.30          h577a1d6_0               bioconda   
  ml_dtypes                  0.2.0         py310hcc13569_2          conda-forge
  mpfr                       4.2.1         h90cbb55_3               conda-forge
  multidict                  6.6.3         py310h89163eb_0          conda-forge
  multiqc                    1.30          pyhdfd78af_1             bioconda   
  narwhals                   2.2.0         pyhcf101f3_0             conda-forge
  natsort                    8.4.0         pyh29332c3_1             conda-forge
  ncurses                    6.5           h2d0b736_3               conda-forge
  networkx                   3.4.2         pyh267e887_2             conda-forge
  nomkl                      1.0           h5ca1d4c_0               conda-forge
  nspr                       4.37          h29cc59b_0               conda-forge
  nss                        3.115         hc3c8bcf_0               conda-forge
  numexpr                    2.10.2        py310hdb6e06b_100        conda-forge
  numpy                      1.26.4        py310hb13e2d6_0          conda-forge
  oauthlib                   3.3.1         pyhd8ed1ab_0             conda-forge
  openjpeg                   2.5.3         h55fea9a_1               conda-forge
  openssl                    3.5.2         h26f9b46_0               conda-forge
  opt_einsum                 3.4.0         pyhd8ed1ab_1             conda-forge
  packaging                  25.0          pyh29332c3_1             conda-forge
  pandas                     2.3.2         py310h0158d43_0          conda-forge
  parallel                   20250622      ha770c72_0               conda-forge
  pbzip2                     1.1.13        h1fcc475_2               conda-forge
  perl                       5.32.1        7_hd590300_perl5         conda-forge
  pigz                       2.8           hadc24fc_1               conda-forge
  pillow                     11.3.0        py310h7e6dc6c_0          conda-forge
  pip                        25.2          pyh8b19718_0             conda-forge
  plotly                     6.3.0         pyhd8ed1ab_0             conda-forge
  pluggy                     1.6.0         pyhd8ed1ab_0             conda-forge
  polars-lts-cpu             1.32.3        py39h5734d0f_0           conda-forge
  primalbedtools             0.10.1        pyhdfd78af_0             bioconda   
  propcache                  0.3.1         py310h89163eb_0          conda-forge
  protobuf                   4.24.4        py310h620c231_0          conda-forge
  pthread-stubs              0.4           hb9d3cd8_1002            conda-forge
  pulp                       2.8.0         py310h9d216b0_2          conda-forge
  py-cpuinfo                 9.0.0         pyhd8ed1ab_1             conda-forge
  pyaml-env                  1.2.2         pyhd8ed1ab_0             conda-forge
  pyasn1                     0.6.1         pyhd8ed1ab_2             conda-forge
  pyasn1-modules             0.4.2         pyhd8ed1ab_0             conda-forge
  pycparser                  2.22          pyh29332c3_1             conda-forge
  pydantic                   2.11.7        pyh3cfb1c2_0             conda-forge
  pydantic-core              2.33.2        py310hbcd0ec0_0          conda-forge
  pyfaidx                    0.9.0.1       pyhdfd78af_0             bioconda   
  pygments                   2.19.2        pyhd8ed1ab_0             conda-forge
  pyjwt                      2.10.1        pyhd8ed1ab_0             conda-forge
  pyopenssl                  25.1.0        pyhd8ed1ab_0             conda-forge
  pyparsing                  3.2.3         pyhe01879c_2             conda-forge
  pysam                      0.23.3        py310h64e62c9_1          bioconda   
  pysocks                    1.7.1         pyha55dd90_7             conda-forge
  pytables                   3.9.2         py310h73b55d5_3          conda-forge
  pytest                     8.4.1         pyhd8ed1ab_0             conda-forge
  python                     3.10.18       hd6af730_0_cpython       conda-forge
  python-dateutil            2.9.0.post0   pyhe01879c_2             conda-forge
  python-dotenv              1.1.1         pyhe01879c_0             conda-forge
  python-flatbuffers         25.2.10       pyhbc23db3_0             conda-forge
  python-gil                 3.10.18       hd8ed1ab_0               conda-forge
  python-isal                1.7.2         py310ha75aee5_0          conda-forge
  python-kaleido             0.2.1         pyhd8ed1ab_0             conda-forge
  python-tzdata              2025.2        pyhd8ed1ab_0             conda-forge
  python-zlib-ng             0.5.1         py310h62b3d1f_0          conda-forge
  python_abi                 3.10          8_cp310                  conda-forge
  pytz                       2025.2        pyhd8ed1ab_0             conda-forge
  pyu2f                      0.1.5         pyhd8ed1ab_1             conda-forge
  pyvcf3                     1.0.4         py310h1fe012e_0          bioconda   
  pyyaml                     6.0.2         py310h89163eb_2          conda-forge
  re2                        2023.09.01    h7f4b329_1               conda-forge
  readline                   8.2           h8c095d6_2               conda-forge
  referencing                0.36.2        pyh29332c3_0             conda-forge
  regex                      2025.7.34     py310h7c4b9e2_0          conda-forge
  requests                   2.32.5        pyhd8ed1ab_0             conda-forge
  requests-oauthlib          2.0.0         pyhd8ed1ab_1             conda-forge
  rich                       14.1.0        pyhe01879c_0             conda-forge
  rich-click                 1.8.9         pyhd8ed1ab_0             conda-forge
  rpds-py                    0.27.0        py310hd8f68c5_0          conda-forge
  rsa                        4.9.1         pyhd8ed1ab_0             conda-forge
  samtools                   1.22.1        h96c455f_0               bioconda   
  scipy                      1.15.2        py310h1d65ade_0          conda-forge
  seqtk                      1.5           h577a1d6_1               bioconda   
  setuptools                 80.9.0        pyhff2d567_0             conda-forge
  six                        1.17.0        pyhe01879c_1             conda-forge
  snappy                     1.1.10        hdb0a2a9_1               conda-forge
  spectra                    0.0.11        pyhd8ed1ab_2             conda-forge
  sqlite                     3.50.4        hbc0de68_0               conda-forge
  sysroot_linux-64           2.34          h087de78_2               conda-forge
  tensorboard                2.15.2        pyhd8ed1ab_0             conda-forge
  tensorboard-data-server    0.7.0         py310h6c63255_2          conda-forge
  tensorflow                 2.15.0        cpu_py310h7825f03_2      conda-forge
  tensorflow-base            2.15.0        cpu_py310h7e4d085_2      conda-forge
  tensorflow-estimator       2.15.0        cpu_py310haacee6a_2      conda-forge
  termcolor                  3.1.0         pyhd8ed1ab_0             conda-forge
  tiktoken                   0.9.0         py310h6e8e937_0          conda-forge
  tk                         8.6.13        noxft_hd72426e_102       conda-forge
  tomli                      2.2.1         pyhe01879c_2             conda-forge
  tqdm                       4.67.1        pyhd8ed1ab_1             conda-forge
  typeguard                  4.4.4         pyhd8ed1ab_0             conda-forge
  typing-extensions          4.15.0        h396c80c_0               conda-forge
  typing-inspection          0.4.1         pyhd8ed1ab_0             conda-forge
  typing_extensions          4.15.0        pyhcf101f3_0             conda-forge
  tzdata                     2025b         h78e105d_0               conda-forge
  urllib3                    2.5.0         pyhd8ed1ab_0             conda-forge
  werkzeug                   3.1.3         pyhd8ed1ab_1             conda-forge
  whatshap                   2.8           py310h184ae93_0          bioconda   
  wheel                      0.45.1        pyhd8ed1ab_1             conda-forge
  wrapt                      1.14.1        py310h5764c6d_1          conda-forge
  xopen                      2.0.2         pyh707e725_2             conda-forge
  xorg-libxau                1.0.12        hb9d3cd8_0               conda-forge
  xorg-libxdmcp              1.1.5         hb9d3cd8_0               conda-forge
  yaml                       0.2.5         h280c20c_3               conda-forge
  yarl                       1.20.1        py310h89163eb_0          conda-forge
  zipp                       3.23.0        pyhd8ed1ab_0             conda-forge
  zlib-ng                    2.2.5         hde8ca8f_0               conda-forge
  zstandard                  0.23.0        py310h7c4b9e2_3          conda-forge
  zstd                       1.5.7         hb8e6e7a_2               conda-forge
```

</details>


There is also a very useful SOP: [https://artic.network/ncov-2019/ncov2019-bioinformatics-sop.html](https://artic.network/ncov-2019/ncov2019-bioinformatics-sop.html)
And additional documentation: [https://artic.readthedocs.io/en/latest/](https://artic.readthedocs.io/en/latest/)

> A bioinformatics pipeline for working with virus sequencing data sequenced with nanopore.

WARNING : This container does not contain the primer schemes found at [https://github.com/artic-network/primer-schemes](https://github.com/artic-network/primer-schemes). Those will have to be downloaded and mounted separately. There are now commands to download the use the primers at runtime.

This image DOES contain the models downloaded with `artic_get_models`

## Example Usage with the artic primers

```bash
# filtering reads
artic guppyplex --min-length 400 --max-length 700  --directory . --prefix SRR22452250_1.fastq.gz --output SRR22452250_1_filtered.fastq

# downloading medaka models for clair3
artic_get_models

# running the artic minion workflow
# the result files will all start with test*
artic minion --normalise 200 --medaka-model ont --threads 4 --read-file sample.fastq --scheme-directory primer-schemes --scheme-version 5.3.2 nCoV-2019 test

# running the artic minion workflow with user-provided primer bedfiles and references
artic minion --normalise 200 --threads 4  --model ont --read-file sample.fastq --scheme-name sars-cov-2  --scheme-version  V5.3.2 name

```

In general, any primer scheme can be used as long as it meets [artic's requirements](https://github.com/artic-network/primer-schemes).

## Clair3 models

Artic uses [Clair3](https://github.com/HKU-BAL/Clair3), which uses its own models for polishing. ONT chemistries update frequently, and artic can throw errors when corresponding ONT models are not found.

These are the models in this image:

```bash
# included models at /opt/conda/envs/artic/bin/models
hifi
hifi_revio
hifi_sequel2
ilmn
ont
ont_guppy5
r1041_e82_260bps_fast_g632
r1041_e82_260bps_hac_g632
r1041_e82_260bps_hac_v400
r1041_e82_260bps_hac_v410
r1041_e82_260bps_sup_g632
r1041_e82_260bps_sup_v400
r1041_e82_260bps_sup_v410
r1041_e82_400bps_fast_g632
r1041_e82_400bps_hac_g615
r1041_e82_400bps_hac_g632
r1041_e82_400bps_hac_v400
r1041_e82_400bps_hac_v410
r1041_e82_400bps_hac_v420
r1041_e82_400bps_hac_v430
r1041_e82_400bps_hac_v500
r1041_e82_400bps_hac_v520
r1041_e82_400bps_sup_g615
r1041_e82_400bps_sup_v400
r1041_e82_400bps_sup_v410
r1041_e82_400bps_sup_v420
r1041_e82_400bps_sup_v430
r1041_e82_400bps_sup_v500
r1041_e82_400bps_sup_v520
r104_e81_hac_g5015
r104_e81_sup_g5015
r941_prom_hac_g360+g422
r941_prom_sup_g5014
```
